--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,3 +27,9 @@ body {
   flex-wrap: wrap;
   flex-direction: row;
 }
+
+.nav-bar {
+  background-color: #f8f9fa;
+  background-image: linear-gradient(#f8f9fa, #000000);
+  padding: 0px 0px 100px 0px;
+}
