fixing background gradient in css classes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,20 @@
 @import 'bootstrap/dist/css/bootstrap.css';
 
-html,
-body {
+html, body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   color: whitesmoke;
+  width: 100%;
+  height: 100%;
+}
+
+.container-page {
+  height: 100%;
+  width: 100%;
+  background-image: linear-gradient(#f8f9fa, #000000);
+  color: #090909;
 }
 
 a {
@@ -18,18 +26,8 @@ a {
   box-sizing: border-box;
 }
 
-body {
-  background-color: black;
-}
-
 .crew-view {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-}
-
-.nav-bar {
-  background-color: #f8f9fa;
-  background-image: linear-gradient(#f8f9fa, #000000);
-  padding: 0px 0px 100px 0px;
 }
