--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@ html, body {
 }
 
 .container-page {
-  height: 100%;
+  height: 900px;
   width: 100%;
   background-image: linear-gradient(#f8f9fa, #000000);
   color: #090909;
@@ -30,4 +30,40 @@ a {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
+}
+
+.welcome-page {
+  padding: 70px 0px 0px 0px;
+  font-family: 'DM Serif Display', serif;
+  font-style: italic;
+  color: #090909;
+}
+
+.welcome-user {
+  color: #090909;
+  padding: 0px 0px 70px 0px;
+  font-family: 'Noto Sans Mono', monospace;
+}
+
+.member-card {
+  justify-content: center;
+}
+
+.member-detail-card-container {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.member-form-container {
+  padding: 50px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.member-form-text {
+  font-family: 'DM Serif Display';
+  padding: 0px 0px 25px 0px;
 }
