--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@ html, body {
 }
 
 .container-page {
-  height: 900px;
+  height: 1700px;
   width: 100%;
   background-image: linear-gradient(#f8f9fa, #000000);
   color: #090909;
@@ -66,4 +66,10 @@ a {
 .member-form-text {
   font-family: 'DM Serif Display';
   padding: 0px 0px 25px 0px;
+}
+
+.member-card-align {
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
