tested create & edit for movie form, styled cards

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -91,3 +91,15 @@ a {
 .card-button {
   font-family: 'Poppins', sans-serif;
 }
+
+.movie-detail-card-container {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.movie-description {
+  font-family: 'Poppins';
+}
